--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FungiHouse">
-        <activity android:name=".SuhuActivity"></activity>
+        <activity android:name=".GrafikActivity"></activity>
+        <activity android:name=".SuhuActivity" />
         <activity android:name=".KelembapanActivity" />
         <activity android:name=".BerandaActivity" />
         <activity android:name=".OTPActivity" />
