GrafikActivity, BerandaActivity, KelembapanActivity, SuhuActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'androidx.browser:browser:1.2.0'
+
+    implementation 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
