--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_splash1"
+        android:icon="@drawable/ic_home"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_splash1"
+        android:roundIcon="@drawable/ic_home"
         android:supportsRtl="true"
         android:theme="@style/Theme.FungiHouse">
         <activity android:name=".GrafikActivity"
